parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EOF
    ERROR
    FLOAT_NUMBER
    INT_NUMBER
    KW_FOR_CLOSE
    OP_LOG_AND
    OP_LOG_NOT
    OP_LOG_OR
    STRING

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> declaracao lista_declaracoes
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> expressao KW_END_LINE
Rule 5     declaracao -> declaracao_if KW_END_LINE
Rule 6     declaracao -> declaracao_for KW_END_LINE
Rule 7     declaracao -> declaracao_while KW_END_LINE
Rule 8     declaracao -> declaracao_print
Rule 9     declaracao -> declaracao_ler KW_END_LINE
Rule 10    declaracao -> declaracao KW_END_LINE
Rule 11    declaracao -> declaracao_variavel_sem_valores KW_END_LINE
Rule 12    declaracao -> atribuicao KW_END_LINE
Rule 13    declaracao -> expressao_booleana KW_END_LINE
Rule 14    declaracao -> declaracao_funcao KW_END_LINE
Rule 15    declaracao -> retorna KW_END_LINE
Rule 16    expressao -> expressao OP_ADD expressao
Rule 17    expressao -> expressao OP_SUB expressao
Rule 18    expressao -> expressao OP_MUL expressao
Rule 19    expressao -> expressao OP_DIV expressao
Rule 20    expressao -> expressao OP_EXP expressao
Rule 21    expressao -> OP_INC ID
Rule 22    expressao -> OP_DEC ID
Rule 23    expressao -> KW_INT
Rule 24    expressao -> KW_FLOAT
Rule 25    expressao -> KW_STRING
Rule 26    expressao -> expressao_booleana
Rule 27    expressao -> ID
Rule 28    expressao_booleana -> expressao OP_LOG_BT_E expressao
Rule 29    expressao_booleana -> expressao OP_LOG_LT_E expressao
Rule 30    expressao_booleana -> expressao OP_LOG_EQUAL expressao
Rule 31    expressao_booleana -> expressao OP_LOG_DIFF expressao
Rule 32    expressao_booleana -> expressao OP_LOG_LT expressao
Rule 33    expressao_booleana -> expressao OP_LOG_BT expressao
Rule 34    boolean -> TRUE
Rule 35    boolean -> FALSE
Rule 36    atribuicao -> ID OP_ATRIB expressao
Rule 37    atribuicao -> atribuicao VIRGULA atribuicao
Rule 38    lista_variaveis -> ID VIRGULA lista_variaveis
Rule 39    lista_variaveis -> ID
Rule 40    declaracao_variavel_sem_valores -> tipo ID VIRGULA lista_variaveis
Rule 41    declaracao_variavel_sem_valores -> tipo ID
Rule 42    criacao_variavel -> tipo ID OP_ATRIB expressao VIRGULA atribuicao
Rule 43    criacao_variavel -> tipo ID OP_ATRIB expressao
Rule 44    expressao -> PAR_OPEN expressao PAR_CLOSE
Rule 45    argumentos -> argumentos VIRGULA argumentos
Rule 46    argumentos -> tipo ID
Rule 47    tipo -> KW_INT
Rule 48    tipo -> KW_BOOLEAN
Rule 49    tipo -> KW_FLOAT
Rule 50    tipo -> KW_STRING
Rule 51    declaracao_if -> KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_CLOSE
Rule 52    declaracao_if -> KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_ELSE declaracao_if
Rule 53    declaracao_print -> KW_PRINT parametros KW_END_LINE
Rule 54    declaracao_ler -> KW_INPUT ID
Rule 55    declaracao_for -> KW_FOR_OPEN ID EM expressao FACA lista_declaracoes KW_CLOSE
Rule 56    declaracao_while -> KW_WHILE expressao_booleana FACA lista_declaracoes KW_CLOSE
Rule 57    declaracao_funcao -> KW_FUNCTION ID KW_FUNC_OPEN lista_declaracoes KW_CLOSE
Rule 58    declaracao_funcao -> KW_FUNCTION ID KW_FUNC_OPEN_ARGS argumentos KW_FUNC_OPEN lista_declaracoes KW_CLOSE KW_END_LINE
Rule 59    expressao -> ID KW_FUNC_OPEN_ARGS parametros
Rule 60    retorna -> KW_RETURN expressao
Rule 61    parametros -> expressao
Rule 62    parametros -> parametros VIRGULA parametros

Terminals, with rules where they appear

EM                   : 55
EOF                  : 
ERROR                : 
FACA                 : 55 56
FALSE                : 35
FLOAT_NUMBER         : 
ID                   : 21 22 27 36 38 39 40 41 42 43 46 54 55 57 58 59
INT_NUMBER           : 
KW_BOOLEAN           : 48
KW_CLOSE             : 51 55 56 57 58
KW_ELSE              : 52
KW_END_LINE          : 4 5 6 7 9 10 11 12 13 14 15 53 58
KW_FLOAT             : 24 49
KW_FOR_CLOSE         : 
KW_FOR_OPEN          : 55
KW_FUNCTION          : 57 58
KW_FUNC_OPEN         : 57 58
KW_FUNC_OPEN_ARGS    : 58 59
KW_IF                : 51 52
KW_IF_OPEN           : 51 52
KW_INPUT             : 54
KW_INT               : 23 47
KW_PRINT             : 53
KW_RETURN            : 60
KW_STRING            : 25 50
KW_WHILE             : 56
OP_ADD               : 16
OP_ATRIB             : 36 42 43
OP_DEC               : 22
OP_DIV               : 19
OP_EXP               : 20
OP_INC               : 21
OP_LOG_AND           : 
OP_LOG_BT            : 33
OP_LOG_BT_E          : 28
OP_LOG_DIFF          : 31
OP_LOG_EQUAL         : 30
OP_LOG_LT            : 32
OP_LOG_LT_E          : 29
OP_LOG_NOT           : 
OP_LOG_OR            : 
OP_MUL               : 18
OP_SUB               : 17
PAR_CLOSE            : 44
PAR_OPEN             : 44
STRING               : 
TRUE                 : 34
VIRGULA              : 37 38 40 42 45 62
error                : 

Nonterminals, with rules where they appear

argumentos           : 45 45 58
atribuicao           : 12 37 37 42
boolean              : 
criacao_variavel     : 
declaracao           : 2 3 10
declaracao_for       : 6
declaracao_funcao    : 14
declaracao_if        : 5 52
declaracao_ler       : 9
declaracao_print     : 8
declaracao_variavel_sem_valores : 11
declaracao_while     : 7
expressao            : 4 16 16 17 17 18 18 19 19 20 20 28 28 29 29 30 30 31 31 32 32 33 33 36 42 43 44 55 60 61
expressao_booleana   : 13 26 51 52 56
lista_declaracoes    : 1 2 51 52 55 56 57 58
lista_variaveis      : 38 40
parametros           : 53 59 62 62
programa             : 0
retorna              : 15
tipo                 : 40 41 42 43 46

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . declaracao lista_declaracoes
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . expressao KW_END_LINE
    (5) declaracao -> . declaracao_if KW_END_LINE
    (6) declaracao -> . declaracao_for KW_END_LINE
    (7) declaracao -> . declaracao_while KW_END_LINE
    (8) declaracao -> . declaracao_print
    (9) declaracao -> . declaracao_ler KW_END_LINE
    (10) declaracao -> . declaracao KW_END_LINE
    (11) declaracao -> . declaracao_variavel_sem_valores KW_END_LINE
    (12) declaracao -> . atribuicao KW_END_LINE
    (13) declaracao -> . expressao_booleana KW_END_LINE
    (14) declaracao -> . declaracao_funcao KW_END_LINE
    (15) declaracao -> . retorna KW_END_LINE
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros
    (51) declaracao_if -> . KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_CLOSE
    (52) declaracao_if -> . KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_ELSE declaracao_if
    (55) declaracao_for -> . KW_FOR_OPEN ID EM expressao FACA lista_declaracoes KW_CLOSE
    (56) declaracao_while -> . KW_WHILE expressao_booleana FACA lista_declaracoes KW_CLOSE
    (53) declaracao_print -> . KW_PRINT parametros KW_END_LINE
    (54) declaracao_ler -> . KW_INPUT ID
    (40) declaracao_variavel_sem_valores -> . tipo ID VIRGULA lista_variaveis
    (41) declaracao_variavel_sem_valores -> . tipo ID
    (36) atribuicao -> . ID OP_ATRIB expressao
    (37) atribuicao -> . atribuicao VIRGULA atribuicao
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao
    (57) declaracao_funcao -> . KW_FUNCTION ID KW_FUNC_OPEN lista_declaracoes KW_CLOSE
    (58) declaracao_funcao -> . KW_FUNCTION ID KW_FUNC_OPEN_ARGS argumentos KW_FUNC_OPEN lista_declaracoes KW_CLOSE KW_END_LINE
    (60) retorna -> . KW_RETURN expressao
    (47) tipo -> . KW_INT
    (48) tipo -> . KW_BOOLEAN
    (49) tipo -> . KW_FLOAT
    (50) tipo -> . KW_STRING

    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 18
    KW_FLOAT        shift and go to state 19
    KW_STRING       shift and go to state 20
    ID              shift and go to state 16
    PAR_OPEN        shift and go to state 21
    KW_IF           shift and go to state 22
    KW_FOR_OPEN     shift and go to state 23
    KW_WHILE        shift and go to state 24
    KW_PRINT        shift and go to state 25
    KW_INPUT        shift and go to state 26
    KW_FUNCTION     shift and go to state 28
    KW_RETURN       shift and go to state 29
    KW_BOOLEAN      shift and go to state 30

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    expressao                      shift and go to state 4
    declaracao_if                  shift and go to state 5
    declaracao_for                 shift and go to state 6
    declaracao_while               shift and go to state 7
    declaracao_print               shift and go to state 8
    declaracao_ler                 shift and go to state 9
    declaracao_variavel_sem_valores shift and go to state 10
    atribuicao                     shift and go to state 11
    expressao_booleana             shift and go to state 12
    declaracao_funcao              shift and go to state 13
    retorna                        shift and go to state 14
    tipo                           shift and go to state 27

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .

    $end            reduce using rule 1 (programa -> lista_declaracoes .)


state 3

    (2) lista_declaracoes -> declaracao . lista_declaracoes
    (3) lista_declaracoes -> declaracao .
    (10) declaracao -> declaracao . KW_END_LINE
    (2) lista_declaracoes -> . declaracao lista_declaracoes
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . expressao KW_END_LINE
    (5) declaracao -> . declaracao_if KW_END_LINE
    (6) declaracao -> . declaracao_for KW_END_LINE
    (7) declaracao -> . declaracao_while KW_END_LINE
    (8) declaracao -> . declaracao_print
    (9) declaracao -> . declaracao_ler KW_END_LINE
    (10) declaracao -> . declaracao KW_END_LINE
    (11) declaracao -> . declaracao_variavel_sem_valores KW_END_LINE
    (12) declaracao -> . atribuicao KW_END_LINE
    (13) declaracao -> . expressao_booleana KW_END_LINE
    (14) declaracao -> . declaracao_funcao KW_END_LINE
    (15) declaracao -> . retorna KW_END_LINE
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros
    (51) declaracao_if -> . KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_CLOSE
    (52) declaracao_if -> . KW_IF expressao_booleana KW_IF_OPEN lista_declaracoes KW_ELSE declaracao_if
    (55) declaracao_for -> . KW_FOR_OPEN ID EM expressao FACA lista_declaracoes KW_CLOSE
    (56) declaracao_while -> . KW_WHILE expressao_booleana FACA lista_declaracoes KW_CLOSE
    (53) declaracao_print -> . KW_PRINT parametros KW_END_LINE
    (54) declaracao_ler -> . KW_INPUT ID
    (40) declaracao_variavel_sem_valores -> . tipo ID VIRGULA lista_variaveis
    (41) declaracao_variavel_sem_valores -> . tipo ID
    (36) atribuicao -> . ID OP_ATRIB expressao
    (37) atribuicao -> . atribuicao VIRGULA atribuicao
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao
    (57) declaracao_funcao -> . KW_FUNCTION ID KW_FUNC_OPEN lista_declaracoes KW_CLOSE
    (58) declaracao_funcao -> . KW_FUNCTION ID KW_FUNC_OPEN_ARGS argumentos KW_FUNC_OPEN lista_declaracoes KW_CLOSE KW_END_LINE
    (60) retorna -> . KW_RETURN expressao
    (47) tipo -> . KW_INT
    (48) tipo -> . KW_BOOLEAN
    (49) tipo -> . KW_FLOAT
    (50) tipo -> . KW_STRING

    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)
    KW_CLOSE        reduce using rule 3 (lista_declaracoes -> declaracao .)
    KW_ELSE         reduce using rule 3 (lista_declaracoes -> declaracao .)
    KW_END_LINE     shift and go to state 32
    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 18
    KW_FLOAT        shift and go to state 19
    KW_STRING       shift and go to state 20
    ID              shift and go to state 16
    PAR_OPEN        shift and go to state 21
    KW_IF           shift and go to state 22
    KW_FOR_OPEN     shift and go to state 23
    KW_WHILE        shift and go to state 24
    KW_PRINT        shift and go to state 25
    KW_INPUT        shift and go to state 26
    KW_FUNCTION     shift and go to state 28
    KW_RETURN       shift and go to state 29
    KW_BOOLEAN      shift and go to state 30

    declaracao                     shift and go to state 3
    lista_declaracoes              shift and go to state 31
    expressao                      shift and go to state 4
    declaracao_if                  shift and go to state 5
    declaracao_for                 shift and go to state 6
    declaracao_while               shift and go to state 7
    declaracao_print               shift and go to state 8
    declaracao_ler                 shift and go to state 9
    declaracao_variavel_sem_valores shift and go to state 10
    atribuicao                     shift and go to state 11
    expressao_booleana             shift and go to state 12
    declaracao_funcao              shift and go to state 13
    retorna                        shift and go to state 14
    tipo                           shift and go to state 27

state 4

    (4) declaracao -> expressao . KW_END_LINE
    (16) expressao -> expressao . OP_ADD expressao
    (17) expressao -> expressao . OP_SUB expressao
    (18) expressao -> expressao . OP_MUL expressao
    (19) expressao -> expressao . OP_DIV expressao
    (20) expressao -> expressao . OP_EXP expressao
    (28) expressao_booleana -> expressao . OP_LOG_BT_E expressao
    (29) expressao_booleana -> expressao . OP_LOG_LT_E expressao
    (30) expressao_booleana -> expressao . OP_LOG_EQUAL expressao
    (31) expressao_booleana -> expressao . OP_LOG_DIFF expressao
    (32) expressao_booleana -> expressao . OP_LOG_LT expressao
    (33) expressao_booleana -> expressao . OP_LOG_BT expressao

    KW_END_LINE     shift and go to state 33
    OP_ADD          shift and go to state 34
    OP_SUB          shift and go to state 35
    OP_MUL          shift and go to state 36
    OP_DIV          shift and go to state 37
    OP_EXP          shift and go to state 38
    OP_LOG_BT_E     shift and go to state 39
    OP_LOG_LT_E     shift and go to state 40
    OP_LOG_EQUAL    shift and go to state 41
    OP_LOG_DIFF     shift and go to state 42
    OP_LOG_LT       shift and go to state 43
    OP_LOG_BT       shift and go to state 44


state 5

    (5) declaracao -> declaracao_if . KW_END_LINE

    KW_END_LINE     shift and go to state 45


state 6

    (6) declaracao -> declaracao_for . KW_END_LINE

    KW_END_LINE     shift and go to state 46


state 7

    (7) declaracao -> declaracao_while . KW_END_LINE

    KW_END_LINE     shift and go to state 47


state 8

    (8) declaracao -> declaracao_print .

    KW_END_LINE     reduce using rule 8 (declaracao -> declaracao_print .)
    OP_INC          reduce using rule 8 (declaracao -> declaracao_print .)
    OP_DEC          reduce using rule 8 (declaracao -> declaracao_print .)
    KW_INT          reduce using rule 8 (declaracao -> declaracao_print .)
    KW_FLOAT        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_STRING       reduce using rule 8 (declaracao -> declaracao_print .)
    ID              reduce using rule 8 (declaracao -> declaracao_print .)
    PAR_OPEN        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_IF           reduce using rule 8 (declaracao -> declaracao_print .)
    KW_FOR_OPEN     reduce using rule 8 (declaracao -> declaracao_print .)
    KW_WHILE        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_PRINT        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_INPUT        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_FUNCTION     reduce using rule 8 (declaracao -> declaracao_print .)
    KW_RETURN       reduce using rule 8 (declaracao -> declaracao_print .)
    KW_BOOLEAN      reduce using rule 8 (declaracao -> declaracao_print .)
    $end            reduce using rule 8 (declaracao -> declaracao_print .)
    KW_CLOSE        reduce using rule 8 (declaracao -> declaracao_print .)
    KW_ELSE         reduce using rule 8 (declaracao -> declaracao_print .)


state 9

    (9) declaracao -> declaracao_ler . KW_END_LINE

    KW_END_LINE     shift and go to state 48


state 10

    (11) declaracao -> declaracao_variavel_sem_valores . KW_END_LINE

    KW_END_LINE     shift and go to state 49


state 11

    (12) declaracao -> atribuicao . KW_END_LINE
    (37) atribuicao -> atribuicao . VIRGULA atribuicao

    KW_END_LINE     shift and go to state 50
    VIRGULA         shift and go to state 51


state 12

    (13) declaracao -> expressao_booleana . KW_END_LINE
    (26) expressao -> expressao_booleana .

  ! shift/reduce conflict for KW_END_LINE resolved as shift
    KW_END_LINE     shift and go to state 52
    OP_ADD          reduce using rule 26 (expressao -> expressao_booleana .)
    OP_SUB          reduce using rule 26 (expressao -> expressao_booleana .)
    OP_MUL          reduce using rule 26 (expressao -> expressao_booleana .)
    OP_DIV          reduce using rule 26 (expressao -> expressao_booleana .)
    OP_EXP          reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_BT_E     reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_LT_E     reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_EQUAL    reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_DIFF     reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_LT       reduce using rule 26 (expressao -> expressao_booleana .)
    OP_LOG_BT       reduce using rule 26 (expressao -> expressao_booleana .)

  ! KW_END_LINE     [ reduce using rule 26 (expressao -> expressao_booleana .) ]


state 13

    (14) declaracao -> declaracao_funcao . KW_END_LINE

    KW_END_LINE     shift and go to state 53


state 14

    (15) declaracao -> retorna . KW_END_LINE

    KW_END_LINE     shift and go to state 54


state 15

    (21) expressao -> OP_INC . ID

    ID              shift and go to state 55


state 16

    (27) expressao -> ID .
    (59) expressao -> ID . KW_FUNC_OPEN_ARGS parametros
    (36) atribuicao -> ID . OP_ATRIB expressao

    KW_END_LINE     reduce using rule 27 (expressao -> ID .)
    OP_ADD          reduce using rule 27 (expressao -> ID .)
    OP_SUB          reduce using rule 27 (expressao -> ID .)
    OP_MUL          reduce using rule 27 (expressao -> ID .)
    OP_DIV          reduce using rule 27 (expressao -> ID .)
    OP_EXP          reduce using rule 27 (expressao -> ID .)
    OP_LOG_BT_E     reduce using rule 27 (expressao -> ID .)
    OP_LOG_LT_E     reduce using rule 27 (expressao -> ID .)
    OP_LOG_EQUAL    reduce using rule 27 (expressao -> ID .)
    OP_LOG_DIFF     reduce using rule 27 (expressao -> ID .)
    OP_LOG_LT       reduce using rule 27 (expressao -> ID .)
    OP_LOG_BT       reduce using rule 27 (expressao -> ID .)
    KW_FUNC_OPEN_ARGS shift and go to state 56
    OP_ATRIB        shift and go to state 57


state 17

    (22) expressao -> OP_DEC . ID

    ID              shift and go to state 58


state 18

    (23) expressao -> KW_INT .
    (47) tipo -> KW_INT .

    KW_END_LINE     reduce using rule 23 (expressao -> KW_INT .)
    OP_ADD          reduce using rule 23 (expressao -> KW_INT .)
    OP_SUB          reduce using rule 23 (expressao -> KW_INT .)
    OP_MUL          reduce using rule 23 (expressao -> KW_INT .)
    OP_DIV          reduce using rule 23 (expressao -> KW_INT .)
    OP_EXP          reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_BT_E     reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_LT_E     reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_EQUAL    reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_DIFF     reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_LT       reduce using rule 23 (expressao -> KW_INT .)
    OP_LOG_BT       reduce using rule 23 (expressao -> KW_INT .)
    ID              reduce using rule 47 (tipo -> KW_INT .)


state 19

    (24) expressao -> KW_FLOAT .
    (49) tipo -> KW_FLOAT .

    KW_END_LINE     reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_ADD          reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_SUB          reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_MUL          reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_DIV          reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_EXP          reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_BT_E     reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_LT_E     reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_EQUAL    reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_DIFF     reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_LT       reduce using rule 24 (expressao -> KW_FLOAT .)
    OP_LOG_BT       reduce using rule 24 (expressao -> KW_FLOAT .)
    ID              reduce using rule 49 (tipo -> KW_FLOAT .)


state 20

    (25) expressao -> KW_STRING .
    (50) tipo -> KW_STRING .

    KW_END_LINE     reduce using rule 25 (expressao -> KW_STRING .)
    OP_ADD          reduce using rule 25 (expressao -> KW_STRING .)
    OP_SUB          reduce using rule 25 (expressao -> KW_STRING .)
    OP_MUL          reduce using rule 25 (expressao -> KW_STRING .)
    OP_DIV          reduce using rule 25 (expressao -> KW_STRING .)
    OP_EXP          reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_BT_E     reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_LT_E     reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_EQUAL    reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_DIFF     reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_LT       reduce using rule 25 (expressao -> KW_STRING .)
    OP_LOG_BT       reduce using rule 25 (expressao -> KW_STRING .)
    ID              reduce using rule 50 (tipo -> KW_STRING .)


state 21

    (44) expressao -> PAR_OPEN . expressao PAR_CLOSE
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao

    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 61
    KW_FLOAT        shift and go to state 62
    KW_STRING       shift and go to state 63
    ID              shift and go to state 60
    PAR_OPEN        shift and go to state 21

    expressao                      shift and go to state 59
    expressao_booleana             shift and go to state 64

state 22

    (51) declaracao_if -> KW_IF . expressao_booleana KW_IF_OPEN lista_declaracoes KW_CLOSE
    (52) declaracao_if -> KW_IF . expressao_booleana KW_IF_OPEN lista_declaracoes KW_ELSE declaracao_if
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros

    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 61
    KW_FLOAT        shift and go to state 62
    KW_STRING       shift and go to state 63
    ID              shift and go to state 60
    PAR_OPEN        shift and go to state 21

    expressao_booleana             shift and go to state 65
    expressao                      shift and go to state 66

state 23

    (55) declaracao_for -> KW_FOR_OPEN . ID EM expressao FACA lista_declaracoes KW_CLOSE

    ID              shift and go to state 67


state 24

    (56) declaracao_while -> KW_WHILE . expressao_booleana FACA lista_declaracoes KW_CLOSE
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros

    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 61
    KW_FLOAT        shift and go to state 62
    KW_STRING       shift and go to state 63
    ID              shift and go to state 60
    PAR_OPEN        shift and go to state 21

    expressao_booleana             shift and go to state 68
    expressao                      shift and go to state 66

state 25

    (53) declaracao_print -> KW_PRINT . parametros KW_END_LINE
    (61) parametros -> . expressao
    (62) parametros -> . parametros VIRGULA parametros
    (16) expressao -> . expressao OP_ADD expressao
    (17) expressao -> . expressao OP_SUB expressao
    (18) expressao -> . expressao OP_MUL expressao
    (19) expressao -> . expressao OP_DIV expressao
    (20) expressao -> . expressao OP_EXP expressao
    (21) expressao -> . OP_INC ID
    (22) expressao -> . OP_DEC ID
    (23) expressao -> . KW_INT
    (24) expressao -> . KW_FLOAT
    (25) expressao -> . KW_STRING
    (26) expressao -> . expressao_booleana
    (27) expressao -> . ID
    (44) expressao -> . PAR_OPEN expressao PAR_CLOSE
    (59) expressao -> . ID KW_FUNC_OPEN_ARGS parametros
    (28) expressao_booleana -> . expressao OP_LOG_BT_E expressao
    (29) expressao_booleana -> . expressao OP_LOG_LT_E expressao
    (30) expressao_booleana -> . expressao OP_LOG_EQUAL expressao
    (31) expressao_booleana -> . expressao OP_LOG_DIFF expressao
    (32) expressao_booleana -> . expressao OP_LOG_LT expressao
    (33) expressao_booleana -> . expressao OP_LOG_BT expressao

    OP_INC          shift and go to state 15
    OP_DEC          shift and go to state 17
    KW_INT          shift and go to state 61
    KW_FLOAT        shift and go to state 62
    KW_STRING       shift and go to state 63
    ID              shift and go to state 60
    PAR_OPEN        shift and go to state 21

    parametros                     shift and go to state 69
    expressao                      shift and go to state 70
    expressao_booleana             shift and go to state 64

state 26

    (54) declaracao_ler -> KW_INPUT . ID

    ID              shift and go to state 71


state 27

    (40) declaracao_variavel_sem_valores -> tipo . ID VIRGULA lista_variaveis
    (41) declaracao_variavel_sem_valores -> tipo . ID

    ID              shift and go to state 72


state 28

    (57) declaracao_funcao -> KW_FUNCTION . ID KW_FUNC_OPEN lista_declaracoes KW_CLOSE
    (58) declaracao_funcao -> KW_FUNCTION . ID KW_FUNC_OPEN_ARGS argumentos KW_FUNC_OPEN lista_declaracoes KW_CLOSE KW_END_LINE

    ID              shift and go to state 73


state 29
